fixing demographics heading text align

--- a/css/sponsor.css
+++ b/css/sponsor.css
@@ -58,6 +58,7 @@
   font-size: 2.5rem;
   color: #B6A1C4;
   margin-bottom: 10px;
+  margin-left: -15px;
 }
 
 .demo-section {
@@ -194,6 +195,14 @@ th {
     padding-right: 10%;
   }
 
+  .heading {
+    text-align: center;
+  }
+
+  .demographics .heading {
+    margin-left: 0px;
+  }
+
   .stat-number {
     font-size: 6rem;
   }
@@ -300,6 +309,10 @@ th {
     font-size: 3.5vw;
   }
 
+  .demographics .heading {
+    text-align: center !important;
+  }
+
   .demo-name {
     width: 85%;
   }
@@ -312,5 +325,7 @@ th {
     padding-left: 10%;
   }
 
-
+  .tooltip-inner {
+      width: 300px;
+  }
 }
